Week 3 pyro exercise

--- a/assignment2/report/main.tex
+++ b/assignment2/report/main.tex
@@ -8,11 +8,11 @@
 \author{
   Joshua Niemelä
   \and
-  ???
+  Hjalti Petursson Poulsen
   \and
   Cornelius Sevald-Krause
 }
-\date{December ???, 2024}
+\date{December 15th, 2024}
 \maketitle
 
 \section{Week 3}
@@ -20,5 +20,8 @@
 
 \section{Week 4}
 \input{week4}
+
+\appendix
+\input{appendix}
 
 \end{document}
