--- a/assignment2/report/imports.tex
+++ b/assignment2/report/imports.tex
@@ -8,7 +8,7 @@
 \usepackage{graphicx}
 \usepackage{float}
 \usepackage{subcaption}
-\usepackage{listings}
+\usepackage{minted}
 \usepackage{fancyvrb}
 \usepackage{booktabs}
 
