Week 4 Gaussian Processes exercise

--- a/assignment2/report/appendix.tex
+++ b/assignment2/report/appendix.tex
@@ -2,3 +2,8 @@
 \section{Week 3 Pyro Exercise}
 \label{sec:week3:code:pyro}
 \inputminted{Python}{../src/week3_pyro.py}
+
+\newpage
+\section{Week 4 Gaussian Processes}
+\label{sec:week4:code:gp}
+\inputminted{Python}{../src/week4_gp.py}
