--- a/assignment2/report/week3.tex
+++ b/assignment2/report/week3.tex
@@ -32,6 +32,26 @@ y = \tan\left(\pi z - \frac{\pi}{2}\right) \quad \text{or equivalently} \quad y 
 
 
 \subsection{Programming Exercise}
+\begin{enumerate}
+  \item We used proposal distribution $unif([-3,3])$ with $k=24$
+  \item We used proposal distribution $\mathcal{N}(0,1) $ with $k=10$ \\
+   The plot below shows that the two scaled proposal distributions provide an upper bound on the unnormalized target distribution.
+  \begin{center}
+      \includegraphics[width=10cm]{./figures/proposals.png}
+  \end{center}
+  \item This uses the proposal $\mathcal{N}(0,1)$ to firstly approximate the importance distribution (We used 1000 proposal samples), then samples are drawn from this new distribution.
+  \item Comparison plot (1000 experiments)
+  \begin{center}
+      \includegraphics[width=12cm]{./figures/comparison1.png}
+  \end{center}
+  From this comparison we can notice that all of the methods produce unbiased results.
+  The uniform rejection sampler has the highest variance in general, 
+  and we can also notice that it doesn't change with the number of samples.
+  The Gaussian rejection and importance sampler seem the same performance overall,
+  with variance that scaled nicely with the number of samples
+  (theoretically the importance sampler should be slightly worse).
+\end{enumerate}
+
 
 \subsection{Pyro}
 
