exercise added to appendix

--- a/assignment2/report/appendix.tex
+++ b/assignment2/report/appendix.tex
@@ -1,4 +1,9 @@
 \newpage
+\section{week3 Programming Exercise}
+\label{sec:week3:code:exercise}
+\inputminted{Python}{../src/week3_exercise.py}
+
+\newpage
 \section{Week 3 Pyro Exercise}
 \label{sec:week3:code:pyro}
 \inputminted{Python}{../src/week3_pyro.py}
