Partly week 4 pyro advanced modelling

--- a/assignment2/report/appendix.tex
+++ b/assignment2/report/appendix.tex
@@ -9,6 +9,11 @@
 \inputminted{Python}{../src/week3_pyro.py}
 
 \newpage
+\section{Week 4 Advanced Modelling}
+\label{sec:week4:code:modelling}
+\inputminted{Python}{../src/Iris_NN_SVI_Solution.py}
+
+\newpage
 \section{Week 4 Gaussian Processes}
 \label{sec:week4:code:gp}
 \inputminted{Python}{../src/week4_gp.py}
