--- a/assignment2/report/week3.tex
+++ b/assignment2/report/week3.tex
@@ -32,6 +32,7 @@ y = \tan\left(\pi z - \frac{\pi}{2}\right) \quad \text{or equivalently} \quad y 
 
 
 \subsection{Programming Exercise}
+The code is shown in~\cref{sec:week3:code:exercise}.
 \begin{enumerate}
   \item We used proposal distribution $unif([-3,3])$ with $k=24$
   \item We used proposal distribution $\mathcal{N}(0,1) $ with $k=10$ \\
