--- a/exam/report/sources.bib
+++ b/exam/report/sources.bib
@@ -7,3 +7,10 @@
       primaryClass={cs.LG},
       url={https://arxiv.org/abs/2107.00630}, 
 }
+
+@misc{classifier_free_guidance,
+      title={Guidance: a cheat code for diffusion models},
+      author={Sander Dieleman},
+      year={2022},
+      url={https://sander.ai/2022/05/26/guidance.html},
+}
