--- a/exam/report/imports.tex
+++ b/exam/report/imports.tex
@@ -2,6 +2,9 @@
 \usepackage{amsthm}
 \usepackage{mathtools}
 
+\usepackage{biblatex}
+\addbibresource{sources.bib}
+
 \usepackage{hyperref}
 
 \usepackage{geometry}
