--- a/exam/report/sources.bib
+++ b/exam/report/sources.bib
@@ -7,3 +7,9 @@
       primaryClass={cs.LG},
       url={https://arxiv.org/abs/2107.00630}, 
 }
+@misc{garnett2017bayesianquadrature,
+      title={Lecture 11: Bayesian quadrature},
+      author={Roman Garnett},
+      year={2017},
+      url={https://arxiv.org/pdf/1703.00787},
+}
