better cond image generation

--- a/exam/report/diffusion.tex
+++ b/exam/report/diffusion.tex
@@ -58,4 +58,16 @@ We therefore get the unconditioned model $\epsilon_\theta(x_t, t) = \epsilon_\th
 This method of dropping out the class information at random gives us a model
 that both learns the conditional distributions of each digit, as well as the
 general unconditional distribution of the whole dataset.
-\subsection{}
+
+
+\subsection{A.2 Comparison}
+
+\subsubsection{Visual Comparison}
+
+
+
+Similar results overall, but we notice that ...
+
+
+
+\subsubsection{Quatitative Comparison}
