--- a/exam/report/sources.bib
+++ b/exam/report/sources.bib
@@ -20,3 +20,10 @@
       year={2017},
       url={https://arxiv.org/pdf/1703.00787},
 }
+@thesis{duvenaud2014automatic,
+      title={Automatic Model Construction with Gaussian Processes},
+      author={David Kristjanson Duvenaud},
+      year={2014},
+      institution={University of Cambridge},
+      url={https://www.cs.toronto.edu/~duvenaud/thesis.pdf},
+}
