--- a/exam/report/constraints.tex
+++ b/exam/report/constraints.tex
@@ -51,70 +51,22 @@ It was trained over 2000 iterations and with a learning rate of $0.02$.
 The learned parameters were
 $\theta^\ast = (\sigma^2 \approx 2.19, \ell \approx 0.75, p \approx 0.67)$.
 The GP prediction and 95\% confidence interval of the predictions
-is shown in~\cref{gp:map:pred},
+is shown in~\cref{fig:gp:map:pred},
 and the log-likelihood of the test data is $\sim -12.99$.
-
-\begin{figure}[htbp]
-  \centering
-  \includegraphics[width=0.6\textwidth]{./figures/map_pred.png}
-  \caption{
-    Prediction using MAP.
-  }
-  \label{gp:map:pred}
-\end{figure}
 
 \subsubsection{Sampling from the posterior with NUTS}
 
-The hyperparameters for sampling with NUTS is as follows:
-\begin{itemize}
-  \item Warmup steps: 2000
-  \item \# of chains: 4
-\end{itemize}
+For sampling with NUTS, we used 2000 warmup steps and 4 chains.
 These were chosen via experimentation and observing the diagnostics
-from Arviz. The sample trace and posteriors are shown in~\cref{gp:nuts:trace} and \cref{gp:nuts:post} resp.
+from Arviz. The sample trace and posteriors are shown in~\cref{fig:gp:nuts:trace} and \cref{fig:gp:nuts:post} resp.
 As can be seen from the trace, the four chains mostly converged to the same parameters,
 except for the length where there is some divergence.
 From the posterior samples we see that the distributions of the parameters
 are (for the most part) unimodal, which is a good sign.
 
-The predictions using a random sample from the posterior is shown in~\cref{gp:nuts:pred}.
-The log-likelihoods of the test data is shown in~\cref{gp:nuts:ll}.
+The predictions using a random sample from the posterior is shown in~\cref{fig:gp:nuts:pred}.
+The log-likelihoods of the test data is shown in~\cref{fig:gp:nuts:ll}.
 The mean and variance of the log-likelihoods is $-11.82$ and $1.76$ resp.
-
-\begin{figure}[htbp]
-  \centering
-  \includegraphics[width=1\textwidth]{./figures/nuts_trace.png}
-  \caption{
-    Sample trace for the 4 different chains over model parameters.
-  }
-  \label{gp:nuts:trace}
-\end{figure}
-\begin{figure}[htbp]
-  \centering
-  \includegraphics[width=1\textwidth]{./figures/nuts_post.png}
-  \caption{
-    Posterior samples of the parameters of the model.
-  }
-  \label{gp:nuts:post}
-\end{figure}
-
-\begin{figure}[htbp]
-  \centering
-  \includegraphics[width=0.6\textwidth]{./figures/nuts_pred.png}
-  \caption{
-    Random prediction using NUTS.
-  }
-  \label{gp:nuts:pred}
-\end{figure}
-\begin{figure}[htbp]
-  \centering
-  \includegraphics[width=0.6\textwidth]{./figures/nuts_ll.png}
-  \caption{
-    Distribution of log-likelihoods of test data
-    from posterior samples using NUTS.
-  }
-  \label{gp:nuts:ll}
-\end{figure}
 
 For computing the posterior log-likelihoods,
 we used the following equation
@@ -131,12 +83,12 @@ we ran 20 iterations of each, with the same hyperparameters
 as described before, except for NUTS we only used a single chain
 to speed it up.
 
-The log-likelihoods of the two methods is shown in~\cref{gp:map_nuts_ll}.
-The mean and variance of the log-likelihoods are shown in~\cref{gp:map_nuts_ll_mean_var}.
+The log-likelihoods of the two methods is shown in~\cref{fig:gp:map_nuts_ll}.
+The mean and variance of the log-likelihoods are shown in~\cref{tab:gp:map_nuts_ll_mean_var}.
 From the comparison we see that NUTS performs slightly better on average,
 but is also less consistent with a few poor model parameters.
 Additionally, sampling with NUTS is much slower that training with MAP,
-and so for this problem the MAP method worked best.
+and so for this problem we found that MAP was superior.
 
 \begin{table}[H]
   \centering
@@ -151,19 +103,12 @@ and so for this problem the MAP method worked best.
   \caption{
     Mean and variance of log-likelihoods using MAP and NUTS.
   }
-  \label{gp:map_nuts_ll_mean_var}
+  \label{tab:gp:map_nuts_ll_mean_var}
 \end{table}
 
-\begin{figure}[htbp]
-  \centering
-  \includegraphics[width=0.6\textwidth]{./figures/map_nuts_ll.png}
-  \caption{
-    Comparing log-likelihoods when using MAP and NUTS.
-  }
-  \label{gp:map_nuts_ll}
-\end{figure}
+\subsection{Learning with Integral Constraints}Q
 
-\subsection{Learning with Integral Constraints}
+\subsubsection{Deriving the distribution of $(\hat{q}, f) | X$}
 
 We write the constraint $\hat{q}$ in matrix form:
 
@@ -192,6 +137,8 @@ we therefore have
   = Q f | X
   \sim \mathcal{N}\left( 0, Q K(X) \tp{Q} \right).
 \end{align*}
+
+\subsubsection{Deriving the distribution of $f | X, \hat{q}$}
 
 Letting ${\Sigma} = Q K(X) \tp{Q}$, we partition ${\Sigma}$
 into four blocks
@@ -223,7 +170,6 @@ $f | X, \hat{q} \sim \mathcal{N}(\mu_{2|1}, \Sigma_{2|1})$, where
   \Sigma_{2|1} = \Sigma_{2 2} - \Sigma_{2 1} \Sigma_{1 1}^{-1} \tp{\Sigma_{2 1}}
 \end{align*}
 
-
 To determine whether $\Sigma_{2|1}$ is full rank, we can check if $\Sigma_{2 | 1}$
 has a trivial null space. This is equivalent to proving that there exists no
 vector $v \ne \overrightarrow{0}$ such that $\Sigma_{2 | 1} v = \overrightarrow{0}$, since the existance of such a vector
@@ -243,3 +189,25 @@ constraint on our distribution) and $w$ will never be $\overrightarrow{0}$ by co
 \end{align}
 We have shown by contradiction that $\Sigma_{2|1}$ will never be full rank since $\tp{w}$ will 
 always be in the null space of $\Sigma_{2|1}$. 
+
+\subsubsection{Sampling $f | X \hat{q}$}
+
+Samples from $f | X, \hat{q}$ with $\ell = 101$
+for $\hat{q} \in \{ 0, 5, 10 \}$ are shown in~\cref{fig:gp:constrained:samples}.
+
+The plots for each of the three figures look similar,
+and although they differ due to the randomness of the sampling,
+the only major difference is that the plots are centered at
+$y = \hat{q}$.
+This is to be expected, as $\hat{q}$ is only a term
+in $\mu_{2|1}$ and not $\Sigma_{2|1}$.
+
+\subsubsection{
+  Plotting the posteriors
+  $f | \mathcal{D}$ and
+  $f | \hat{q}, \mathcal{D}$
+}
+
+A plot of the unconstrained posterior is shown in~\cref{fig:gp:pred:unconstrained}.
+
+[TODO]: Plot constrained posterior.
