--- a/exam/report/appendix.tex
+++ b/exam/report/appendix.tex
@@ -81,7 +81,16 @@
   \centering
   \includegraphics[width=0.65\textwidth]{./figures/gp_pred_unconstrained.png}
   \caption{
-    Plot of unconstrained posterior $f | \mathcal{D}$.
+    Plot of unconstrained posterior predictive.
   }
   \label{fig:gp:pred:unconstrained}
+\end{figure}
+%
+\begin{figure}[p]
+  \centering
+  \includegraphics[width=0.65\textwidth]{./figures/gp_pred_constrained.png}
+  \caption{
+    Plot of constrained posterior predictive.
+  }
+  \label{fig:gp:pred:constrained}
 \end{figure}
