--- a/exam/report/constraints.tex
+++ b/exam/report/constraints.tex
@@ -106,7 +106,7 @@ and so for this problem we found that MAP was superior.
   \label{tab:gp:map_nuts_ll_mean_var}
 \end{table}
 
-\subsection{Learning with Integral Constraints}Q
+\subsection{Learning with Integral Constraints}
 
 \subsubsection{Deriving the distribution of $(\hat{q}, f) | X$}
 
