--- a/exam/report/diffusion.tex
+++ b/exam/report/diffusion.tex
@@ -62,10 +62,10 @@ general unconditional distribution of the whole dataset.
 \subsubsection{Reduce the ELBO variance}
 
 To reduce the variance of the gradents when using the ELBO-bound loss, as discussed in "Improved Denoising Diffusion Probabilistic Models". 
-To implement this we keep track of the previous 10 losses for each $t \in \{0,...,T\}$ And use an importance sampler to sample the timestep t from.
+To implement this we keep track of the previous 10 losses for each $t \in \{0,...,T\}$ And use an importance sampler to sample the time-step t from.
 $$L_{vlb}= E_{t\sim p_t} \Left[\frac{L_t}{p_t}]\Right \;\; \text{with} \;\; p_t \probto \sqrt{E[L^2]}, \sum p_t = 1 $$.
-We initialize training by running the model as the base model (sampling each t uniformly) until we have 10 samples for each timestep.
-Once we have all of these samples we employ the importance sampler to sample new timesteps.
+We initialize training by running the model as the base model (sampling each t uniformly) until we have 10 samples for each time-step.
+Once we have all of these samples we employ the importance sampler to sample new time-steps.
 The initialization phase requires a large number of samples but is typically finished within the first iteration, even for $T=1000$
 \\
 ... Code sketch ...
