--- a/exam/report/diffusion.tex
+++ b/exam/report/diffusion.tex
@@ -19,7 +19,15 @@ We note that rounding is equivalent to taking the floor of the value offset by $
 
 
 \subsubsection{Variation 2: Importance sampling}
-
+To reduce the variance of the gradients when using the ELBO-bound loss, as discussed in "Improved Denoising Diffusion Probabilistic Models". 
+To implement this we keep track of the previous 10 losses for each $t \in \{0,...,T\}$ And use an importance sampler to sample the time-step t from.
+$$L_{vlb}= E_{t\sim p_t} \Left[\frac{L_t}{p_t}]\Right \;\; \text{with} \;\; p_t \probto \sqrt{E[L^2]}, \sum p_t = 1 $$.
+We initialize training by running the model as the base model (sampling each t uniformly) until we have 10 samples for each time-step.
+Once we have all of these samples we employ the importance sampler to sample new time-steps.
+The initialization phase requires a large number of samples but is typically finished within the first iteration, even for $T=1000$
+\\
+... Code sketch ...
+\\\subsubsection{Variation 4: Continuous-time diffusion model using SDEs}
 
 \subsubsection{Variation 3: Classifier-free guidance}
 Another variation we implemented is classifier-free guidance.
@@ -61,17 +69,6 @@ This method of dropping out the class information at random gives us a model
 that both learns the conditional distributions of each digit, as well as the
 general unconditional distribution of the whole dataset.
 
-\subsubsection{Reduce the ELBO variance}
-
-To reduce the variance of the gradents when using the ELBO-bound loss, as discussed in "Improved Denoising Diffusion Probabilistic Models". 
-To implement this we keep track of the previous 10 losses for each $t \in \{0,...,T\}$ And use an importance sampler to sample the time-step t from.
-$$L_{vlb}= E_{t\sim p_t} \Left[\frac{L_t}{p_t}]\Right \;\; \text{with} \;\; p_t \probto \sqrt{E[L^2]}, \sum p_t = 1 $$.
-We initialize training by running the model as the base model (sampling each t uniformly) until we have 10 samples for each time-step.
-Once we have all of these samples we employ the importance sampler to sample new time-steps.
-The initialization phase requires a large number of samples but is typically finished within the first iteration, even for $T=1000$
-\\
-... Code sketch ...
-\\\subsubsection{Variation 4: Continuous-time diffusion model using SDEs}
 %We also have form \cite{anderson_reverse-time_1982} that any SDE has a reverse time SDE of the form:
 %\begin{equation}
 %  \frac{d x} =  [f(x, t)-g^2 (t) \nabla_x \log p_t (x)]dt + g(t)dW
